--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ Flask==2.0.2
 psycopg2-binary~=2.9.6
 #psycopg2==2.3.6
 pgvector==0.1.6
-numpy==1.21.4
+numpy
 plotly==5.5.0
 networkx==2.6.3
 python-dotenv==0.19.2
