--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ psycopg2-binary~=2.9.6
 #psycopg2==2.3.6
 pgvector==0.1.6
 numpy
-plotly~==5.5.0
+plotly
 networkx~==2.6.3
 python-dotenv~==0.19.2
 scipy~==1.7.3
