--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 Flask==2.0.2
 psycopg2-binary~=2.9.6
 #psycopg2==2.3.6
-pgvector==0.1.6
+pgvector
 numpy
 plotly
-networkx~==2.6.3
-python-dotenv~==0.19.2
-scipy~==1.7.3
-scikit-learn~==1.0.2
+networkx
+python-dotenv
+scipy
+scikit-learn
