--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,10 @@
       "use": "@vercel/python"
     }
   ],
+  "functions": {
+    "api/index.js": {
+      "maxDuration": 200 // This function can run for a maximum of 30 seconds
+  },
   "routes": [
     {
       "src": "/(.*)",
