--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,11 @@
 {
   "version": 2,
+  "builds": [
+    {
+      "src": "api/index.py",
+      "use": "@vercel/python"
+    }
+  ],
   "routes": [
     {
       "src": "/(.*)",
@@ -10,7 +16,6 @@
     "FLASK_ENV": "production",
     "FLASK_APP": "api/index.py"
   },
-
   "functions": {
     "api/index.py": {
       "maxDuration": 60
