--- a/vercel.json
+++ b/vercel.json
@@ -12,8 +12,7 @@
   },
   "functions": {
     "api/index.py": {
-      "maxDuration": 60,
-      "runtime": "vercel-python@3.11"
+      "maxDuration": 60
     }
   }
 }
